[package]
name = "polykill"
version = "1.5.0"
edition = "2021"
license = "MIT"
authors = ["Bryn Deering"]
description = "Lightweight command line utility for removing dependencies and build artifacts from unused projects."
readme = "README.md"
homepage = "https://github.com/Bdeering1/polykill#readme"
repository = "https://github.com/Bdeering1/polykill"
keywords = ["cli", "filesystem", "tools", "node", "cargo"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
rust-version = "1.78"

[dependencies]
clap = { version = "~4.5", features = ["derive"]}
console = "~0.15"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
